# rtpspy

./: .gitignore  README.md  h264det.py  h264proc.py  rtpdet.py  rtpspy.py  rtspclient.py
rtpclient/: Makefile.am  Makefile.in  configure  configure.ac  h264det.c  h264det.h  rtpclient.c  rtpdet.h  slice.h  util.c  util.h
